--- a/two-vue.html
+++ b/two-vue.html
@@ -7,11 +7,47 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
 </head>
 
 <body>
-	<div id="app">{{foo}}</div>
-	<script src="js/two-vue.js"></script>
+	<div id="watch-example">
+		<p>
+			Ask a yes/no question:
+			<input v-model="question">
+		</p>
+		<p>{{ answer }}</p>
+	</div>
+	<div id="app">
+		<div v-bind:class="classObject">看看我的class</div>
+	</div>
+	<div id="app2">
+		<div v-bind:class="[activeClass, errorClass]">看看我的class2</div>
+	</div>
+	<div id="app3">
+		<div v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }">我的颜色和字体大小是自定义的</div>
+	</div>
+	<div id="app4">
+		<div :style="{ display: ['-webkit-box', '-ms-flexbox', 'flex'] }"></div>
+	</div>
+	<div id="app5">
+		<h1 v-if="ok">Yes</h1>
+		<h1 v-else>No</h1>
+	</div>
+	<ul id="example-2">
+		<li v-for="(item, index) in items">
+			{{ parentMessage }} - {{ index }} - {{ item.message }}
+		</li>
+	</ul>
+	<ul id="v-for-object" class="demo">
+		<li v-for="(value, key) in object">
+			{{ key }}: {{ value }}
+		</li>
+	</ul>
+
+	<script src="js/two-vue.js">
+	</script>
 </body>
 
 </html>
